--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,4 @@
 api_key: 'cd953183-c36a'
 base_uri: 'https://my.workshare.com/api/open-v1.0'
 login_uri: '/user_sessions.json'
+files_meta: '/files.json'
